--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,8 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
+  
+  {{ page.author }}
 
   <div class="entry">
     {{ content }}
