--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <article class="post">
   <h1>{{ page.title }}</h1>
   
-  {{ page.author }}
+ <em><bf>{{ page.author }}</bf></em>
 
   <div class="entry">
     {{ content }}
