--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <article class="post">
   <h1>{{ page.title }}</h1>
   
- <em><bf>{{ page.author }}</bf></em>
+ <bf><em>{{ page.author }}</em></bf>
 
   <div class="entry">
     {{ content }}
