--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,10 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
-  
- <bf><em>Written by {{ page.author }}</em></bf>
+ 
+    <div class="author">
+    Written by {{ page.author }}
+  </div>
 
   <div class="entry">
     {{ content }}
