--- a/style.scss
+++ b/style.scss
@@ -69,11 +69,11 @@ p {
 }
 
 a {
-  color: $springGreen;
+  color: $darkerGray;
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
-    color: $springGreen;
+    color: $darkerGray;
   }
 }
 
