--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ comments: true
   <h1>{{ page.title }}</h1>
  
   <div class="author">
-    Written by {{ page.author }}
+    Written by {{ page.author }} on {{ page.date | date: "%B %e, %Y" }}
   </div>
 
   <div class="entry">
