--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,15 +7,11 @@ comments: true
   <h1>{{ page.title }}</h1>
  
   <div class="author">
-    Written by {{ page.author }} on {{ page.date | date: "%B %e, %Y" }}
+    <span style="font-colour: red">Written</span> by {{ page.author }} on {{ page.date | date: "%B %e, %Y" }}
   </div>
 
   <div class="entry">
     {{ content }}
-  </div>
-
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
 
   {% include disqus.html %}
