--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,8 +7,10 @@ comments: true
   <h1>{{ page.title }}</h1>
  
   <div class="author">
-    <span style="font-colour: red">Written</span> by {{ page.author }} on {{ page.date | date: "%B %e, %Y" }}
+    Written by {{ page.author }} on {{ page.date | date: "%B %e, %Y" }}
   </div>
+  
+  <span style="font-colour: red">Penis</span>
 
   <div class="entry">
     {{ content }}
