--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,8 @@ comments: true
   </div>
   
   <div class="entry">
-    {{ content }}
+    {{ content }
+    {% include share-bar.html %}
   </div>
 
   {% include disqus.html %}
