--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,19 +2,17 @@
 layout: default
 comments: true
 ---
+{{ page.title }}
 
-<article class="post">
-  <h1>{{ page.title }}</h1>
- 
-Written by <bf>{{ page.author }}</bf> on <span style="font-color: grey">{{ page.date | date: "%B %e, %Y" }}</span>
-  
-  <div class="entry">
-    {{ content }}
-    {% include share-bar.html %}
-  </div>
+Written by {{ page.author }} on {{ page.date | date: "%B %e, %Y" }}
 
-  {% include disqus.html %}
-</article>
+{% if post.author == "Stefanie" %}
 
+<img src="/images/steffi.jpg" width="50px">
 
+{% endif %}
 
+{{ content }}
+
+{% include share-bar.html %} 
+{% include disqus.html %} 
