--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,17 +2,23 @@
 layout: default
 comments: true
 ---
-{{ page.title }}
+<article class="post">
+  <h1>{{ page.title }}</h1>
+  
+Written by <bf>{{ page.author }}</bf> on <span style="font-color: grey">{{ page.date | date: "%B %e, %Y" }}</span>
+   
+{% if page.author == "Stefanie" %}
 
-Written by {{ page.author }} on {{ page.date | date: "%B %e, %Y" }}
-
-{% if post.author == "Stefanie" %}
-
-<img src="/images/steffi.jpg" width="50px">
+    <img src="/images/steffi.jpg" width="50px">
 
 {% endif %}
+   
+   <div class="entry">
+     {{ content }}
+     {% include share-bar.html %}
+   </div>
 
-{{ content }}
+   {% include disqus.html %}
+ </article>
 
-{% include share-bar.html %} 
-{% include disqus.html %} 
+
