--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">People</a>
+            <a href="{{ site.baseurl }}/people">People</a>
             <a href="{{ site.baseurl }}/archive">Explore</a>
           </nav>
         </header>
