--- a/style.scss
+++ b/style.scss
@@ -30,7 +30,7 @@ body {
   width: 100%;
 }
 
-h1front, h2front, h3front, h4front, h5front, h6front {
+h1post, h2post, h3post, h4post, h5post, h6post {
   font-family: $helveticaNeue;
   color: $darkerGray;
   font-weight: 300;
