--- a/style.scss
+++ b/style.scss
@@ -46,6 +46,12 @@ h1post, h2post, h3post, h4post, h5post, h6post {
   }
 }
 
+meta {
+  font-size: larger;
+  font-weight: 500;
+  text-align: center;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: $darkerGray;
