--- a/style.scss
+++ b/style.scss
@@ -47,6 +47,23 @@ h1post {
   }
 }
 
+h2post {
+  font-family: $helveticaNeue;
+  color: $darkerGray;
+  font-weight: 300;
+  background-color: #F0F0F0;
+  text-align: center;
+  font-size: 20px;
+	
+  line-height: 1.7;
+  margin: 1em 0 15px;
+  padding: 0;
+
+  @include mobile {
+    line-height: 1.4;
+  }
+}
+
 meta {
   font-size: larger;
   font-weight: 500;
