--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,9 @@ layout: default
 comments: true
 ---
 <article class="post">
-  <h1>{{ page.title }}</h1>
+  <center><h1post>{{ page.title }}</h1post></center>
   
-Written by <bf>{{ page.author }}</bf> on <span style="font-color: grey">{{ page.date | date: "%B %e, %Y" }}</span>
+<center>Written by <bf>{{ page.author }}</bf> on <span style="font-color: grey">{{ page.date | date: "%B %e, %Y" }}</span></center>
    
    
    <div class="entry">
