--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,17 +2,16 @@
 layout: default
 comments: true
 ---
+
 <article class="post">
-  <center><h1post>{{ page.title }}</h1post></center>
-  <center><span style="font-weight: bold"> {{ post.subtitle }} </span> </center>
-  <center><span style="font-style: italic"> By {{ post.author }} on {{ post.date | date: "%B %e, %Y" }} </span> </center   
-   
-   <div class="entry">
-     {{ content }}
-     {% include share-bar.html %}
-   </div>
+  <h1>{{ page.title }}</h1>
+  <h2>{{ post.subtitle }}</h2>
+  <span style="font-style: italic"> By {{ post.author }} on {{ post.date | date: "%B %e, %Y" }} </span>
 
-   {% include disqus.html %}
- </article>
+  <div class="entry">
+    {{ content }}
+    {% include share-bar.html %}
+  </div>
 
-
+  {% include disqus.html %}
+</article>
