--- a/style.scss
+++ b/style.scss
@@ -35,7 +35,7 @@ h1, h2, h3, h4, h5, h6 {
   color: $darkerGray;
   font-weight: bold;
 
-  line-height: 1;
+  line-height: 10pt;
   margin: 1em 0 7px;
   padding: 0;
 
