--- a/style.scss
+++ b/style.scss
@@ -39,6 +39,20 @@ line-height: 10pt;
   }
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: $helveticaNeue;
+  color: $darkerGray;
+  font-weight: bold;
+
+  line-height: 1;
+  margin: 1em 0 15px;
+  padding-bottom: 10pt;
+
+  @include mobile {
+    line-height: 1.4;
+  }
+}
+
 h1 {
   font-size: 30px;
   a {
