--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,19 +1,19 @@
 ---
 layout: default
-comments: true
 ---
 
 <article class="post">
   <h1>{{ page.title }}</h1>
-  <h2>{{ post.subtitle }}</h2>
-  <div>
-  <span style="font-style: italic"> By {{ post.author }} on {{ post.date | date: "%B %e, %Y" }} </span>
+  
+    <div class="date">
+    Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
-    
+
   <div class="entry">
     {{ content }}
-    {% include share-bar.html %}
   </div>
+
+
 
   {% include disqus.html %}
 </article>
