--- a/style.scss
+++ b/style.scss
@@ -268,7 +268,7 @@ nav {
   .read-more {
     text-transform: uppercase;
     font-size: 15px;
-    margin: 1.8em .8em .8em .8em;
+    margin: 1.8em;
   }
 }
 
