--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,10 +5,8 @@ layout: default
 <article class="post">
   <h1>{{ page.title }}</h1>
   
-    <div class="date">
-    Written by {{ post.author }} on {{ page.date | date: "%B %e, %Y" }} 
-  </div>
-
+    <span style="font-style: italic"> By {{ post.author }} on {{ post.date | date: "%B %e, %Y" }} </span
+  
   <div class="entry">
     {{ content }}
   </div>
