--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,9 @@ layout: default
 <article class="post">
   <h1>{{ page.title }}</h1>
   
-    <span style="font-style: italic"> By {{ post.author }} on {{ post.date | date: "%B %e, %Y" }} </span
+  <div class="date">
+    Written on {{ page.date | date: "%B %e, %Y" }}
+  </div>
   
   <div class="entry">
     {{ content }}
