--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,10 @@ layout: default
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
   
+  <div class="author">
+    By {{ page.author }}
+  </div>
+  
   <div class="entry">
     {{ content }}
   </div>
